<resources>
    <string name="app_name">Outfit</string>
    <string name="google_maps_api_key">AIzaSyCDL3qjAsZGFncXeN7PogP4nC-tY3xLZJ8</string>

    <string name="login">Log in</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="signup_email">Email address</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>

    <string name="login_success_toast">Login Success!</string>
    <string name="login_fail_toast">Please enter valid username and password!</string>
    <string name="signup_success_toast">Sign up Success! Try to login now!</string>
    <string name="signup_fail_toast">Sign up failed! Please enter valid information!</string>

    <string name="title_hint">Title...</string>
    <string name="description_hint">Description...</string>
    <string name="brand_hint">Add brand (optional)</string>
    <string name="add_tag">Add Tag</string>
    <string name="select_from_gallery">Select a picture from album.</string>
    <string name="submit_post">Submit</string>
    <string name="title_empty">Title cannot be empty!</string>
    <string name="image_empty">Please uplaod an image!</string>
    <string name="tag_empty">Please choose at least one tag.</string>
    <string name="picture_not_taken">Picture wasn\'t taken!</string>
    <string name="error_saving">Error while saving!</string>

    <string name="comment">Say something...</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>

    <string name="tab_now">Now</string>
    <string name="tab_following">Following</string>
    <string name="tab_nearby">Nearby</string>
    <string name="tab_myPosts">Posts</string>
    <string name="tab_favorites">Favorites</string>
    <string name="search">Search clothing styles here.</string>
    <string name="empty_search">No such posts. Please try with other keywords.</string>
    <string name="no_following">You have no followings!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_maps">Map</string>


    <string name="choose_tag">Please choose at least one tag from below.</string>
    <string name="tags_limit">You can only add up to 4 tags!</string>
    <string name="chip_artsy">Artsy</string>
    <string name="chip_bohemian">Bohemian</string>
    <string name="chip_casual">Casual</string>
    <string name="chip_chic">Chic</string>
    <string name="chip_office">Office</string>
    <string name="chip_preppy">Preppy</string>
    <string name="chip_rocker">Rocker</string>
    <string name="chip_sexy">Sexy</string>
    <string name="chip_sophisticated">Sophisticated</string>
    <string name="chip_street">Street</string>
    <string name="chip_tomboy">Tomboy</string>
    <string name="chip_vintage">Vintage</string>
</resources>