<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    tools:context=".fragments.PostsFragment">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabTimeline"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_now" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_following" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabNearby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_nearby" />
        </com.google.android.material.tabs.TabLayout>

    </androidx.viewpager.widget.ViewPager>




</FrameLayout>